# data-profiler

./: .gitignore  DESIGN.md  README.md  Take_home_data_profiler.md  demo.py  pyproject.toml
data_profiler/: __init__.py  cli.py  config.py  dashboard.py  report.py  run.py
data_profiler/adapters/: __init__.py  base.py  databricks.py  duckdb.py  snowflake.py  sqlite.py
data_profiler/enrichment/: anomaly.py  constraint_suggester.py  constraints.py  patterns.py
data_profiler/persistence/: checkpoint.py  graph_model.py  graphml_serializer.py  jsonld_serializer.py  openmetadata.py  profile_store.py  serializers.py
data_profiler/schema/: portable_types.py
data_profiler/workers/: delta_worker.py  merge_worker.py  relationship_worker.py  schema_worker.py  stats_worker.py
tests/: test_aggregates.py  test_anomaly.py  test_constraint_suggester.py  test_constraints.py  test_cross_engine.py  test_dashboard.py  test_databricks_adapter.py  test_duplicates.py  test_e2e.py  test_graph.py  test_incremental.py  test_integration.py  test_openmetadata.py  test_patterns.py  test_portable_types.py  test_relationships.py  test_report.py  test_snowflake_adapter.py  test_stats.py
